# fastapi-example

./: .env.example  .gitignore  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 53a610f7eb82_init_db.py  d578690401e7_init_db.py
app/models/: base.py  country.py  department.py  employee.py  job.py  location.py  region.py  task.py
app/models/enums/: language.py
